@@ -5,6 +5,13 @@ GO INTO TRUNK. IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS
 WELL AS TRUNK.  EVERYTHING ELSE GOES INTO TRUNK
 
 2006/09/28
+	* Removed config setting sg_miracle_skill_duration, replaced it with
+	  sg_miracle_skill_min_duration and sg_miracle_skill_max_duration [Skotlex]
+	* Merged fix that makes no_spawn_on_player work on mobs with a fixed spawn
+	  location (only if the setting is set to 100). [Skotlex]
+	* Merged monster_ai&256 (pick random starting position when using skills),
+	  now mobs by default will always check their skill list from the beginning.
+	  [Skotlex]
 	* Fixed a possible crash on Wand of Hermode. [Skotlex]
 2006/09/27
 	* Merged the heal cleanup which makes it display 0 when used on Berserked
