@@ -51,6 +51,8 @@ monster_max_aspd: 199
 //16: If set, mob skills defined for friends will also trigger on themselves.
 //32: When set, the monster ai is executed for all monsters in maps that have 
 //    players on them, instead of only for mobs who are in the vecinity of players.
+//256: When set, a mob will pick a random skill from it's list and start from that instead of checking skills
+//    in orders (when unset, if a mob has too many skills, the ones near the end will rarely get selected)
 monster_ai: 0
 
 // Should mobs be able to be warped (add as needed)?
@@ -111,6 +113,8 @@ boss_spawn_delay: 100
 // and spawning the mob within player-view anyway, unless the max (100) is used,
 // in which case the mob will not be spawned, and it'll be retried again in
 // 5 seconds.
+// NOTE: This has no effect on mobs that always spawn on the very same cell
+// (like ant eggs) except if you set it to the max.
 no_spawn_on_player: 0
 
 // Should spawn coordinates in the mob-spawn files be ignored? (Note 1)
